--- a/nd001-advanced/en-us/6_2_React Fundamentals_Rendering UI with React.yaml
+++ b/nd001-advanced/en-us/6_2_React Fundamentals_Rendering UI with React.yaml
@@ -650,7 +650,7 @@ concepts:
 
           JSX is awesome, but it does need to be transpiled into regular JavaScript before reaching the browser. We typically use a transpiler like [Babel](https://github.com/babel/babel) to accomplish this for us. We can run Babel through a build tool, like [Webpack](https://github.com/facebookincubator/create-react-app) which helps bundle all of our assets (JavaScript files, CSS, images, etc.) for web projects.
 
-          To streamline these initial configurations, we can use Facebook's Create React App package to manage all the setup for us! This tool is incredibly helpful to get started in building a React app, as it sets up everything we need with _zero configuration_! Install Create React App (through the command-line with [npm](https://www.npmjs.com/get-npm)), and then we can walk through what makes it so great.
+          To streamline these initial configurations, we can use Facebook's Create React App package to manage all the setup for us! This tool is incredibly helpful to get started in building a React app, as it sets up everything we need with _zero configuration_! Install Create React App (through the command-line with [npm](https://www.npmjs.com/get-npm)), and then we can talk through what makes it so great.
            
           ```bash
           npm install -g create-react-app
